# ALICE-i18n-SaaS

./: .env.example  .gitignore  LICENSE  docker-compose.yml
.github/workflows/: ci.yml
database/migrations/: 001_users.sql  002_projects.sql  003_plan_configs.sql  004_api_usage.sql  005_functions.sql  006_generations.sql  007_general_public_enforcement.sql
docker/: Dockerfile.api-gateway  Dockerfile.core-engine  Dockerfile.frontend
frontend/: eslint.config.mjs  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/api/stripe/checkout/: route.ts
frontend/app/api/stripe/webhook/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/admin/: page.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/dashboard/console/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/projects/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/gallery/: page.tsx
frontend/lib/api/: client.ts
frontend/lib/hooks/: use-admin.ts  use-plan.ts  use-usage.ts
frontend/lib/stripe/: client.ts  server.ts
frontend/lib/supabase/: client.ts  server.ts
k8s/: Chart.yaml
k8s/values/: values.yaml
scripts/: smoke-test.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/core-engine/: Cargo.toml
services/core-engine/src/: main.rs
